@@ -2,6 +2,8 @@ Revision history for Dist-Metadata
 
 {{$NEXT}}
 
+  - Include 'xt/' in the default no_index:directory list
+
 0.901     2011-06-22T01:22:07Z
 
   - Initial release
